--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
             <id>opencollab-releases</id>
             <url>https://repo.opencollab.dev/maven-releases/</url>
         </repository>
+        
+        <!-- DiscordSRV Repository -->
+        <repository>
+            <id>scarsz-nexus</id>
+            <url>https://nexus.scarsz.me/content/groups/public/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -149,6 +155,14 @@
             <optional>true</optional>
         </dependency>
         -->
+        
+        <!-- DiscordSRV API -->
+        <dependency>
+            <groupId>com.discordsrv</groupId>
+            <artifactId>discordsrv</artifactId>
+            <version>1.30.1</version>
+            <scope>provided</scope>
+        </dependency>
         
         <!-- bStats Metrics -->
         <dependency>
